--- a/app.json
+++ b/app.json
@@ -32,9 +32,7 @@
     },
 
     "plugins": [
-      "expo-router",
-      "expo-font",
-      "expo-web-browser"
+      "expo-router"
     ],
 
     "experiments": {
@@ -42,3 +40,4 @@
     }
   }
 }
+
